--- a/annal.css
+++ b/annal.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    background-color: #000408;
+    background-color: #811414;
     color: white;
     padding: 40px 0;
     text-align: center;
@@ -46,7 +46,7 @@ nav a {
 }
 
 nav a:hover {
-    color: #00ff55; /* Change color on hover */
+    color: #ff004c; /* Change color on hover */
 }
 
 main {
